# Telegram-Chat-Bot

./: .env  README.md  pyproject.toml  requirements.txt
src/: bot.py
src/handlers/: __init__.py  start.py
src/middlewares/: user_ban.py
src/utils/: ai.py  config.py  formater.py
src/utils/db/: __init__.py  models.py  user.py
src/utils/logger/: logger.py
src/utils/other/: emoji.py
