[tool.poetry]
name = "aiogram_template_bot"
version = "0.1.0"
description = ""
authors = ["Ivan Sakharov <vingving648@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.28"
python-dotenv = "^1.0.1"
psycopg = "^3.1.18"
translators = "^5.9.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
pytz = "^2024.1"
apscheduler = "^3.10.4"
aiogram = "3.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"